--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "build": "ncc build src/index.ts -o dest"
   },
   "dependencies": {
     "@types/node": "^14.14.31",
@@ -14,6 +15,7 @@
     "axios": "0.21.1",
     "@types/axios": "0.14.0",
     "adm-zip": "0.5.5",
-    "aws-sdk": "2.884.0"
+    "aws-sdk": "2.884.0",
+    "uuidv4": "6.2.7"
   }
 }
