--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@types/node": "^14.14.31",
     "typescript": "^4.2.2",
+    "dotenv": "8.2.0",
     "twitter": "1.7.1",
     "@types/twitter": "1.7.0",
     "axios": "0.21.1",
